<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">zScanner</string>

    <string name="drawer_about">About application</string>
    <string name="drawer_purge">Delete history</string>
    <string name="drawer_logout">Log out</string>

    <string name="about_text">ZScanner is designed to quickly import examination and photo documentation\ninto Hospital Information System (HIS).\n\n© 2019–2020 IKEM Data Center\n\nCyber Security by TeskaLabs.</string>

    <string name="jobs_overview_no_jobs">no saved tasks</string>
    <string name="login_screen_username_placeholder"><i><small>login</small></i></string>
    <string name="login_screen_password_placeholder"><i><small>password</small></i></string>
    <string name="login_screen_submit">Login</string>
    <string name="username_prefix">Current user</string>

    <string name="fragment_patient_hint"><i><small>personal identification number</small></i></string>
    <string name="fragment_patient_patient">Search by NIN</string>
    <string name="fragment_patient_mru">… choose from history …</string>
    <string name="fragment_patient_scan">… or scan</string>
    <string name="fragment_patient_scan_barcode">Scan the barcode or QR code with patient ID</string>

    <string name="fragment_document_type">Choose document type</string>
    <string name="fragment_document_sub_type">Choose document subtype</string>
    <string name="fragment_document_hint_name"><i><small>description (optional)</small></i></string>

    <string name="fragment_pages_camera">Take a picture</string>
    <string name="fragment_pages_instruction">no pictures chosen</string>
    <string name="fragment_pages_deleted">Deleted</string>
    <string name="fragment_pages_back">Back</string>

    <string name="fragment_jobs_overview_history">History</string>
    <string name="fragment_jobs_overview_department">Choose the department</string>
    <string name="fragment_jobs_description_with_subtype">Type: %1$s, subtype: %2$s, pages: %3$d</string>
    <string name="fragment_jobs_description_without_subtype">Type: %1$s, pages: %2$d</string>
    <string name="fragment_jobs_refresh_departments">Refresh the list of departments</string>

    <string name="logout_prompt_text">Are you sure you want to log out of and erase all saved data?</string>
    <string name="logout_prompt_button_negative">LOG OUT</string>
    <string name="no_i_dont_want_to_button">no, I don\'t want to</string>
    <string name="finish_prompt_text">Are you sure you want to finish the task and return?</string>
    <string name="finish_prompt_button_negative">FINISH</string>
    <string name="log_out_credentials_expired">Login details have expired. Please log in again using your username and password.</string>
    <string name="automatic_log_out_notification">You\'ve been logged out from zScanner</string>

    <string name="err_invalid_patient">No valid patient is selected.</string>
    <string name="err_no_photo">No photo selected.</string>
    <string name="error_submitting">There was a problem with sending the task to server. Please try again.</string>
    <string name="error_out_of_memory">Memory couldn\'t be allocated</string>
    <string name="error_no_camera">No camera available</string>
    <string name="error_no_permissions">You cannot continue without granting necessary permissions</string>
    <string name="error_login_not_successful">Login was not successful</string>
    <string name="error">Error</string>
    
    <string name="biometric_auth">Biometric authentication</string>
    <string name="login_with_fingerprint">Login with fingerprint</string>
    <string name="login_with_password">Login with password</string>
    <string name="no_biometry_available">No biometry available</string>

    <string name="title_patient">Patient selection</string>
    <string name="title_foto">Photos</string>
    <string name="title_type">Document type</string>
    <string name="title_subtype">Document subtype</string>


</resources>