<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen_message.CreateMessagePatientFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_patient_patient"
                    style="@style/TextLabel"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2">

                        <AutoCompleteTextView
                            android:id="@+id/patient_id_edittext"
                            android:inputType="phone|numberDecimal"
                            android:digits="0123456789/-"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fragment_patient_hint"
                            />

                        <ImageView
                            android:id="@+id/patient_validated_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_done3"
                            android:layout_gravity="right|center_vertical"
                            />

                        <ImageView
                            android:id="@+id/no_patient_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_error"
                            android:layout_gravity="right|center_vertical"
                            />

                        <ImageView
                            android:id="@+id/too_many_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_warning"
                            android:layout_gravity="right|center_vertical"
                            />

                        <ProgressBar
                            android:id="@+id/progress_bar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="right|center_vertical"
                            />
                    </FrameLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_patient_mru"
                        style="@style/TextLabel"
                        />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mru_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="bottom|end" >

        <LinearLayout
            android:id="@+id/popup_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/background_opaque"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <LinearLayout
                android:id="@+id/scan_barcode_layout"
                style="@style/SmallButtonWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_mini"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/fragment_patient_scan"
                    style="@style/TextLabel"
                    />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/scan_barcode_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Button.Small"
                    android:src="@drawable/ic_barcode_w" />
            </LinearLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_next_step_1"
                style="@style/FAB.Main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigate_next2" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>

